# i2autotools

./: Makefile.am  configure.ac  hello.c  whine.c  whine.h
src/: hello.c
